--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <header>
     <div class="container">
       <a href="" class="logo">
-        <img src="/Template-2/Image/logo.png" alt="Logo" />
+        <img src="Image/logo.png" alt="Logo" />
       </a>
       <nav>
         <i class="fas fa-bars toggle-menu"></i>
@@ -131,7 +131,7 @@
   <div class="desgin">
     <div class="desgin-content">
       <div class="image">
-        <img src="/Template-2/Image/mobile.png" alt="mobile">
+        <img src="Image/mobile.png" alt="mobile">
       </div>
       <div class="desgin-text">
         <h3>OUR DESIGN COMES WITH...</h3>
@@ -176,56 +176,56 @@
       </div>
       <div class="grid-container-box">
         <div class="box">
-          <img src="/Template-2/Image/shuffle-01.jpg" alt="">
+          <img src="Image/shuffle-01.jpg" alt="">
           <div class="caption">
             <h4>Awesome</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box">
-          <img src="/Template-2/Image/shuffle-02.jpg" alt="">
+          <img src="Image/shuffle-02.jpg" alt="">
           <div class="caption">
             <h4>Awesome</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box">
-          <img src="/Template-2/Image/shuffle-03.jpg" alt="">
+          <img src="Image/shuffle-03.jpg" alt="">
           <div class="caption">
             <h4>Awesome</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box">
-          <img src="/Template-2/Image/shuffle-04.jpg" alt="">
+          <img src="Image/shuffle-04.jpg" alt="">
           <div class="caption">
             <h4>Awesome</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box">
-          <img src="/Template-2/Image/shuffle-05.jpg" alt="">
+          <img src="Image/shuffle-05.jpg" alt="">
           <div class="caption">
             <h4>Awesome</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box">
-          <img src="/Template-2/Image/shuffle-06.jpg" alt="">
+          <img src="Image/shuffle-06.jpg" alt="">
           <div class="caption">
             <h4>Awesome</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box">
-          <img src="/Template-2/Image/shuffle-07.jpg" alt="">
+          <img src="Image/shuffle-07.jpg" alt="">
           <div class="caption">
             <h4>Awesome</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box">
-          <img src="/Template-2/Image/shuffle-08.jpg" alt="">
+          <img src="Image/shuffle-08.jpg" alt="">
           <div class="caption">
             <h4>Awesome</h4>
             <p>Photography</p>
@@ -239,7 +239,7 @@
   <!-- Start Video -->
   <div class="video">
     <video loop muted autoplay __idm_id__="14942209">
-      <source src="/Template-2/Videos/Kasper-TemplateTwo.mp4" type="video/mp4">
+      <source src="Videos/Kasper-TemplateTwo.mp4" type="video/mp4">
     </video>
     <div class="text">
       <h3>super awesome video here</h3>
@@ -257,7 +257,7 @@
           Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
           Mauris blandit aliquet elit, eget tincidunt.
         </p>
-        <img src="/Template-2/Image/about.png" alt="about">
+        <img src="Image/about.png" alt="about">
       </div>
     </div>
   </div>
@@ -298,12 +298,12 @@
         <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.
         </p>
         <div class="content">
-          <img src="/Template-2/Image/skills-01.jpg" alt="">
+          <img src="Image/skills-01.jpg" alt="">
           <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget
             tincidunt.</p>
         </div>
         <div class="content">
-          <img src="/Template-2/Image/skills-02.jpg" alt="">
+          <img src="Image/skills-02.jpg" alt="">
           <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget
             tincidunt.</p>
         </div>
