--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
     <!-- End Header  -->
     <!-- Start Landing -->
     <div class="landing">
+      <div id="img">
+        <img src="./Image/landing-1.jpg" alt="" />
+        <!-- ./Image/landing-1.jpg -->
+      </div>
       <div class="overlay"></div>
       <div class="text">
         <div class="content">
